# LANScanner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  README_EN.md  THIRD_PARTY_NOTICES.md
crates/app/: Cargo.toml  build.rs
crates/app/src/: app.rs  cli.rs  main.rs  message.rs  visual_check.rs
crates/app/src/shell/: bootstrap.rs  mod.rs  notice.rs  selectors.rs  state.rs  subscription.rs
crates/app/src/shell/tasks/: connect.rs  mod.rs  scan.rs  verify.rs
crates/app/src/shell/update/: connect.rs  credential.rs  mod.rs  modal.rs  network.rs  scan.rs  visual_check.rs  window.rs
crates/app/src/shell/view/: dropdown_metrics.rs  filters.rs  header_status.rs  layout.rs  mod.rs  resize_overlay.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/credential/: mod.rs  store.rs
crates/core/src/docker/: mod.rs
crates/core/src/network/: mod.rs
crates/core/src/scanner/: identity.rs  mod.rs  oui_db.rs  tcp_scan.rs
crates/core/src/ssh/: auth.rs  config.rs  key_mgmt.rs  mod.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  locale.rs  process.rs  window.rs
crates/platform/src/app_finder/: discovery.rs  mod.rs  picker.rs  powershell.rs  vscode_windows.rs
crates/platform/src/launcher/: clients.rs  mod.rs  shell.rs  ssh_target.rs  types.rs  vscode.rs
crates/platform/src/network/: mod.rs  neighbor_cache.rs  neighbor_rows.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/credential_card/: mod.rs  view.rs
crates/ui/src/device_detail/: mod.rs  view.rs
crates/ui/src/device_list/: mod.rs  view.rs
crates/ui/src/modals/: cred_mgmt.rs  docker_select.rs  help.rs  mod.rs
crates/ui/src/scan_card/: mod.rs  view.rs
crates/ui/src/theme/: colors.rs  fonts.rs  icons.rs  mod.rs  styles.rs
crates/ui/src/titlebar/: mod.rs  view.rs
crates/ui/src/widgets/: dropdown.rs  mod.rs  modal.rs  toggle.rs
