[package]
name = "lanscanner-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
ssh_core = { path = "../core", package = "lanscanner-core" }
sys-locale = "0.3"
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.2", default-features = false, features = ["shape"] }

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
